--- a/North America.html
+++ b/North America.html
@@ -18,49 +18,48 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-md navbar-class fixed-top">
-    <div class="container-fluid">
-      <div class="col-sm-1 justify-content-sm-end">
-        <a class="navbar-brand" href="index.html">
-          <img src="/images/newlogo.png" width="100" height="100">
+  <section>
+    <nav class="navbar navbar-expand-sm fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand ms-auto" href="index.html">
+          <img src="/images/images/newlogo.png" class="logonav">
         </a>
-      </div>
-      <div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-      </div>
-      <div class="col-sm-11 ps-2 container-fluid justify-content-sm-end">
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav  mx-2 mb-2 mb-lg-0 ">
-            <li class="nav-item">
-              <a class="col-sm-2 nav-link mx-2 mb-2 btn btn-outline-light button-29" href="About.html">About Us!</a>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+          <ul class="navbar-nav ">
+            <li class="nav-item dropdown px-2">
+              <a class="nav-link dropdown-toggle btn button-29" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Continents
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="Africa.html">Africa</a></li>
+                <li><a class="dropdown-item" href="Asia.html">Asia</a></li>
+                <li><a class="dropdown-item" href="Europe.html">Europe</a></li>
+                <li><a class="dropdown-item" href="North America.html">North America</a></li>
+                <li><a class="dropdown-item" href="Oceania.html">Oceana</a></li>
+                <li><a class="dropdown-item" href="South America.html">South America</a></li>
+              </ul>
             </li>
-            <li class="nav-item">
-              <a class="col-sm-2 nav-link mx-2 mb-2 btn btn-outline-light button-29" href="Our_gums.html">Our Gums!</a>
+            <li class="nav-item px-2">
+              <a class="nav-link btn button-29" href="Specialties.html">
+                Specialty Gums
+              </a>
             </li>
-            <ul class="navbar-nav mx-3 mb-2">
-              <li class="col-sm-2 nav-item dropdown">
-                <a class="nav-link dropdown-toggle btn btn-outline-light button-29" href="#" role="button" data-bs-toggle="dropdown"
-                  aria-expanded="false">
-                  Continents!
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="Africa.html">Africa</a></li>
-                  <li><a class="dropdown-item" href="Asia.html">Asia</a></li>
-                  <li><a class="dropdown-item" href="Europe.html">Europe</a></li>
-                  <li><a class="dropdown-item" href="North America.html">North America</a></li>
-                  <li><a class="dropdown-item" href="South America.html">South America</a></li>
-                </ul>
-              </li>
-            </ul>
+            <li class="nav-item px-2">
+              <a class="nav-link btn button-29" href="About.html">
+                About Us
+              </a>
+            </li>
           </ul>
         </div>
       </div>
-    </div>
-  </nav>
-    
+    </nav>
+  </section>
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
 </script>
