--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                 Continents
               </a>
               <ul class="dropdown-menu">
-                <li><a href="Africa.html" class="btn btn-inner-clr inner-clrn dropdown-item">African Gum</a></li>
-                <li><a href="Asia.html" class="btn btn-inner-clr inner-clrn dropdown-item">Asian Gum</a></li>
-                <li><a href="Europe.html" class="btn btn-inner-clr inner-clrn dropdown-item">European Gum</a></li>
-                <li><a href="North America.html" class="btn btn-inner-clr inner-clrn dropdown-item">North American
+                <li><a href="Africa.html" class="btn inner-clrn1 dropdown-item">African Gum</a></li>
+                <li><a href="Asia.html" class="btn inner-clrn dropdown-item">Asian Gum</a></li>
+                <li><a href="Europe.html" class="btn inner-clrn dropdown-item">European Gum</a></li>
+                <li><a href="North America.html" class="btn inner-clrn dropdown-item">North American
                     Gum</a></li>
-                <li><a href="Oceania.html" class="btn btn-inner-clr inner-clrn dropdown-item">Oceania Gum</a></li>
-                <li><a href="South America.html" class="btn btn-inner-clr inner-clrn dropdown-item">South American
+                <li><a href="Oceania.html" class="btn inner-clrn dropdown-item">Oceania Gum</a></li>
+                <li><a href="South America.html" class="btn inner-clrn dropdown-item">South American
                     Gum</a></li>
               </ul>
             </li>
@@ -78,13 +78,13 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/images/Tropical.jpg" class="d-block w-100 h-40" alt="...">
+          <img src="/images/Tropical.png" class="d-block w-100 h-40" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="/images/ArsenalFillerIMG-1.png" class="d-block w-100 h-40" alt="...">
+          <img src="/images/Desert.png" class="d-block w-100 h-40" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="/images/ArsenalFillerIMG-1.png" class="d-block w-100 h-40" alt="...">
+          <img src="/images/Beach.png" class="d-block w-100 h-40" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -292,6 +292,30 @@
           d="M0,32L60,58.7C120,85,240,139,360,144C480,149,600,107,720,90.7C840,75,960,85,1080,90.7C1200,96,1320,96,1380,96L1440,96L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
         </path>
       </svg>
+      <div class="container-fluid text-center">
+        <div class="row">
+          <div class="col-sm-10 mx-auto">
+            <div class="card card-parallax">
+              <div class="card-body">
+                <h5 class="card-title">Want to Know More About our Company?</h5>
+                <div class="row">
+                  <p class="card-text">
+                   
+                  </p>
+                </div>
+                <div class="row">
+                  <p class="card-text">
+                  </p>
+                </div>
+                <br>
+                <a href="About.html" class="btn btn-inner-clr inner-clr">
+                  About Us!
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path fill="#abdaf4" fill-opacity="1"
           d="M0,224L80,240C160,256,320,288,480,293.3C640,299,800,277,960,261.3C1120,245,1280,235,1360,229.3L1440,224L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z">
@@ -337,10 +361,10 @@
             Follow us on our Social Medias to keep up with recent news about new and up and coming Gums!
             <br>
             <br>
-            <a href="https://www.facebook.com/Sakura-Japanese-Restaurant-367551639982061/">
+            <a href="https://www.facebook.com/profile.php?id=100091569529499">
               <img src="/images/Facebook_Logo.png" height="50px">
             </a>
-            <a href="">
+            <a href="https://instagram.com/exotic_gum?igshid=YmMyMTA2M2Y=">
               <img src="/images/Instagram_logo.png" height="50px">
             </a>
           </div>
